--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
+
+  <meu-primeiro-component></meu-primeiro-component>
+  <app-meu-primeiro2></app-meu-primeiro2>
+  <app-cursos></app-cursos>
+  
   <h1>
     Welcome to {{ title }}!
   </h1>
